--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-Broken Hill Surf Shop Inventory.laccdb
 .DS_Store
 */.DS_Store
 Thumbs.db
 */Thumbs.db
+/IPT Product Inventory.laccdb
+/Broken Hill Surf Shop Inventory.laccdb
