Moved stuff, fixed stuff, renamed stuff. Stuff. //Commit for further change tracking

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,4 @@
 */.DS_Store
 Thumbs.db
 */Thumbs.db
-/IPT Product Inventory.laccdb
-/Broken Hill Surf Shop Inventory.laccdb
+/Broken Hill Surf Shop Database.laccdb
